# Logger

./: CMakeLists.txt  log.cpp  log.h  log_test.cpp  log_utils.h
tests/: CMakeLists.txt  log_test.cpp
